AKS Setup/new-ingress  letsencrypt certificate/aks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod  
spec: 
  tls:
  - hosts:
    - nginx.iteindia.cloud
    secretName: tls-secre 
  ingressClassName: nginx
  rules:
  - host: nginx.iteindia.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
